syntax = "proto3";

package key;

service KeyService {
    rpc CreateKey (CreateKeyDto) returns (KeyResponse) {} 
    rpc GetKey (Key_user_id) returns (KeyResponse) {}
}

message CreateKeyDto {
    string user_id = 1;
    string api_key = 2;
    string secret_key = 3;
    string seed_phrase = 4;
}

message Key_user_id {
    string user_id = 1;
}

message KeyResponse {
    optional string api_key = 1;
    optional string secret_key = 2;
    optional int32 statusCode = 3;
    optional string message = 4;
}